syntax = "proto3";
package io.timemates.api.authorizations.requests;

import "io/timemates/api/authorizations/types/Authorization.proto";
import "io/timemates/api/authorizations/types/Metadata.proto";

message StartAuthorizationRequest {
  string emailAddress = 1;

  optional Metadata metadata = 2;

  message Result {
    string verificationHash = 1;
    int64 expiresAt = 2;
    int32 attempts = 3;
  }
}