syntax = "proto3";
import "io/timemates/api/authorizations/types/Authorization.proto";

message GetAuthorizationsRequest {
  // null if it's start of pagination
  optional string nextPageToken = 1;

  message Response {
    repeated Authorization authorizations = 1;
    string nextPageToken = 2;
  }
}